# clsscan

./: CMakeLists.txt  Untitled-1.dockerfile  config.json  json.txt  main.cpp  test.cpp  testing.cpp  testopencv.cpp
Inc/: GPIO.h  config.h  main.h  recognize.h  scan.h  servo.h
Src/: GPIO.cpp  base64.cpp  c.txt  config.cpp  delay.cpp  first2.cpp  firsttest.cpp  kmeans.cpp  main.cpp  main_recognize.cpp  main_scan.cpp  ocr.cpp  ocrtest.cpp  recognize.cpp  scan.cpp  servo.cpp  test.cpp  test_json  test_json_conf.cpp  testing.cpp
